--- a/docs/api_reference/Makefile
+++ b/docs/api_reference/Makefile
@@ -2,7 +2,7 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    = --keep-going -n -T
+SPHINXOPTS    = -n -T
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = build
