Pin databricks-agents<=0.22.0
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -333,10 +333,11 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
+          # GenAI evaluation tests require databricks-agents that only work with Python 3.10~
+          pip install 'databricks-agents<=0.22.0' openai
+      - uses: ./.github/actions/show-versions
       - name: Run GenAI Tests
         run: |
-          # GenAI evaluation tests require databricks-agents that only work with Python 3.10~
-          pip install databricks-agents openai
           pytest tests/genai
 
   optuna:
