--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -38,7 +38,7 @@ pytorch:
 
   models:
     minimum: "2.1.0"
-    maximum: "2.6.0"
+    maximum: "2.7.0"
     requirements:
       ">= 0.0.0": ["torchvision", "scikit-learn"]
       ">= 1.8": ["transformers"]
@@ -48,7 +48,7 @@ pytorch:
 
   autologging:
     minimum: "2.1.0"
-    maximum: "2.6.0"
+    maximum: "2.7.0"
     requirements:
       ">= 0.0.0": ["tensorboard"]
     run: |
@@ -64,7 +64,7 @@ pytorch-lightning:
 
   autologging:
     minimum: "2.0.3"
-    maximum: "2.5.1"
+    maximum: "2.5.1.post0"
     requirements:
       ">= 0.0.0": ["scikit-learn", "torchvision", "protobuf<4.0.0", "tensorboard", "greenlet<3"]
     run: |
@@ -138,7 +138,7 @@ xgboost:
 
   models:
     minimum: "1.7.6"
-    maximum: "3.0.0"
+    maximum: "3.0.1"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
     python:
@@ -148,7 +148,7 @@ xgboost:
 
   autologging:
     minimum: "1.7.6"
-    maximum: "3.0.0"
+    maximum: "3.0.1"
     requirements:
       ">= 0.0.0": ["scikit-learn", "matplotlib"]
     python:
@@ -219,7 +219,7 @@ onnx:
 
   models:
     minimum: "1.14.1"
-    maximum: "1.17.0"
+    maximum: "1.18.0"
     requirements:
       ">= 0.0.0": ["onnxruntime", "torch", "scikit-learn"]
     run: |
@@ -379,7 +379,7 @@ diviner:
       pip install git+https://github.com/databricks/diviner.git
 
   models:
-    minimum: "0.1.0"
+    minimum: "0.1.1"
     maximum: "0.1.1"
     requirements:
       # https://github.com/alan-turing-institute/sktime/issues/2898
@@ -404,7 +404,7 @@ h2o:
     pip_release: "h2o"
   models:
     minimum: "3.42.0.1"
-    maximum: "3.46.0.6"
+    maximum: "3.46.0.7"
     run: |
       pytest tests/h2o
 
@@ -523,7 +523,7 @@ openai:
       pip install git+https://github.com/openai/openai-python
   models:
     minimum: "1.0.1"
-    maximum: "1.75.0"
+    maximum: "1.78.1"
     requirements:
       ">= 0.0.0": [
           "pyspark",
@@ -542,7 +542,7 @@ openai:
     test_every_n_versions: 10
   autologging:
     minimum: "1.17.0"
-    maximum: "1.75.0"
+    maximum: "1.78.1"
     python:
       # OpenAI Swarm requires Python >=3.10
       ">= 1.33.0": "3.10"
@@ -569,14 +569,14 @@ dspy:
       pip install git+https://github.com/stanfordnlp/dspy.git
   models:
     minimum: "2.5.17"
-    maximum: "2.6.18"
+    maximum: "2.6.23"
     requirements:
       ">= 0.0.0": ["openai"]
     run: |
       pytest tests/dspy --ignore tests/dspy/test_dspy_autolog.py
   autologging:
     minimum: "2.5.17"
-    maximum: "2.6.18"
+    maximum: "2.6.23"
     requirements:
       ">= 0.0.0": ["openai"]
     run: |
@@ -590,7 +590,7 @@ langchain:
   models:
     # Where the large package update was made (langchain-core, community, ...)
     minimum: "0.0.354"
-    maximum: "0.3.24"
+    maximum: "0.3.25"
     requirements:
       ">= 0.0.0": [
           "pyspark",
@@ -638,7 +638,7 @@ langchain:
       fi
   autologging:
     minimum: "0.1.0"
-    maximum: "0.3.24"
+    maximum: "0.3.25"
     requirements:
       ">= 0.0.0": [
           "pyspark",
@@ -687,7 +687,7 @@ langgraph:
 
   models:
     minimum: "0.2.0"
-    maximum: "0.3.31"
+    maximum: "0.4.4"
     requirements:
       ">= 0.0.0": [
           "langchain",
@@ -702,7 +702,7 @@ langgraph:
 
   autologging:
     minimum: "0.2.0"
-    maximum: "0.3.31"
+    maximum: "0.4.4"
     requirements:
       ">= 0.0.0": [
           "langchain",
@@ -724,7 +724,7 @@ llama_index:
   models:
     # New event/span framework is fully implemented in 0.10.44
     minimum: "0.10.44"
-    maximum: "0.12.32"
+    maximum: "0.12.36"
     requirements:
       ">= 0.0.0": [
           "openai",
@@ -740,7 +740,7 @@ llama_index:
     run: pytest tests/llama_index --ignore tests/llama_index/test_llama_index_autolog.py --ignore tests/llama_index/test_llama_index_tracer.py
   autologging:
     minimum: "0.10.44"
-    maximum: "0.12.32"
+    maximum: "0.12.36"
     requirements:
       ">= 0.0.0": [
           "openai",
@@ -759,7 +759,7 @@ autogen:
     #  pip install git+https://github.com/microsoft/autogen#subdirectory=python/packages/autogen-agentchat
   autologging:
     minimum: "0.2.36"
-    maximum: "0.5.4"
+    maximum: "0.5.7"
     unsupported: [">=0.4"]
     python:
       "== dev": "3.10"
@@ -779,7 +779,7 @@ gemini:
       pip install git+https://github.com/googleapis/python-genai
   autologging:
     minimum: "1.0.0"
-    maximum: "1.11.0"
+    maximum: "1.15.0"
     requirements:
     run: |
       # Install legacy gemini SDK to ensure the integration works for the legacy SDK 
@@ -793,7 +793,7 @@ anthropic:
       pip install git+https://github.com/anthropics/anthropic-sdk-python
   autologging:
     minimum: "0.30.0"
-    maximum: "0.50.0"
+    maximum: "0.51.0"
     requirements:
       "< 0.40.0": ["httpx<0.28.0"]
     run: pytest tests/anthropic
@@ -809,7 +809,7 @@ crewai:
       pip install git+https://github.com/crewAIInc/crewAI
   autologging:
     minimum: "0.80.0"
-    maximum: "0.114.0"
+    maximum: "0.120.1"
     unsupported: ["==0.114.0"]
     python:
       ">= 0.80.0": "3.10"
@@ -839,7 +839,7 @@ pydantic_ai:
     python:
       ">= 0.1.0": "3.10"
     minimum: "0.1.9"
-    maximum: "0.1.9"
+    maximum: "0.2.4"
     requirements:
       ">= 0.0.0": ["mcp"]
     run: pytest tests/pydantic_ai
@@ -852,7 +852,7 @@ smolagents:
       pip install "git+https://github.com/huggingface/smolagents"
   autologging:
     minimum: "1.14.0"
-    maximum: "1.14.0"
+    maximum: "1.15.0"
     python:
       ">=1.14.0": "3.10"
     requirements:
@@ -905,7 +905,7 @@ johnsnowlabs:
     pip_release: "johnsnowlabs"
   models:
     minimum: "4.4.6"
-    maximum: "5.5.5"
+    maximum: "6.0.0"
     requirements:
       ">= 0.0.0": ["pandas<=1.5.3"]
       "< 5.2.8": ["pyspark<3.4"]
@@ -924,7 +924,7 @@ promptflow:
       pip install git+https://github.com/microsoft/promptflow#subdirectory=src/promptflow
   models:
     minimum: "1.3.0"
-    maximum: "1.17.2"
+    maximum: "1.18.0"
     requirements:
       # Requirements to run sparkudf predict test
       # marshmallow 3.24.0 has breaking change causes `from marshmallow.fields import _T` error
@@ -942,7 +942,7 @@ litellm:
       pip install git+https://github.com/BerriAI/litellm.git
   autologging:
     minimum: "1.52.9"
-    maximum: "1.67.1"
+    maximum: "1.69.3"
     # TODO: Remove this once https://github.com/BerriAI/litellm/issues/9656 is fixed
     unsupported: [">=1.59"]
     requirements:
@@ -961,7 +961,7 @@ groq:
       pip install git+https://github.com/groq/groq-python
   autologging:
     minimum: "0.13.0"
-    maximum: "0.23.0"
+    maximum: "0.24.0"
     requirements:
     run: pytest tests/groq
 
@@ -972,5 +972,5 @@ bedrock:
   autologging:
     # BedrockRuntime client is added in boto3 1.33
     minimum: "1.33.0"
-    maximum: "1.38.0"
+    maximum: "1.38.16"
     run: pytest tests/bedrock
