--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -81,6 +81,7 @@ keras:
     maximum: "3.9.2"
     requirements:
       ">= 3.0.0": ["jax[cpu]>0.4"]
+      "< 3.10.0": ["jax[cpu]<0.6"]
     run: |
       export KERAS_BACKEND=jax
       pytest tests/keras/test_callback.py
@@ -90,6 +91,7 @@ keras:
     maximum: "3.9.2"
     requirements:
       ">= 3.0.0": ["jax[cpu]>0.4"]
+      "< 3.10.0": ["jax[cpu]<0.6"]
     run: |
       export KERAS_BACKEND=jax
       pytest tests/keras/test_autolog.py
@@ -450,6 +452,9 @@ transformers:
     unsupported: [
         # Avoid this patch: https://github.com/huggingface/transformers/pull/29032
         ">=4.38.0,<4.39.0",
+        # https://github.com/huggingface/transformers/issues/38269
+        "== 4.52.1",
+        "== 4.52.2",
       ]
     requirements:
       ">= 0.0.0": [
@@ -491,6 +496,9 @@ transformers:
     unsupported: [
         # Avoid this patch: https://github.com/huggingface/transformers/pull/29032
         ">=4.38.0,<4.39.0",
+        # https://github.com/huggingface/transformers/issues/38269
+        "== 4.52.1",
+        "== 4.52.2",
       ]
     requirements:
       ">= 0.0.0": [
@@ -623,6 +631,10 @@ langchain:
           "unitycatalog-langchain",
         ]
       ">=0.3": ["databricks-langchain"]
+    pre_test: |
+      # Installing both pyspark and databricks-connect causes a conflict
+      pip uninstall -y databricks-connect
+      pip install --no-deps --force-reinstall pyspark
     run: |
       # Some dependencies above includes 'mlflow-skinny' but not full 'mlflow', such as databricks-vectorsearch.
       # This causes installation of mlflow-skinny from stable version, while 'mlflow' points to the dev version,
@@ -662,6 +674,10 @@ langchain:
           "fastapi>=0.100.0",
           "langchain-openai>=0.2.0",
         ]
+    pre_test: |
+      # Installing both pyspark and databricks-connect causes a conflict
+      pip uninstall -y databricks-connect
+      pip install --no-deps --force-reinstall pyspark
     run: |
       pytest tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
