Lint example code blocks
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,7 +61,7 @@ repos:
         name: custom-python-lint
         entry: clint
         language: system
-        files: '\.(py|ipynb)$'
+        files: '\.(py|ipynb|rst)$'
         stages: [pre-commit]
         require_serial: true
 
