--- a/pyproject.toml
+++ b/pyproject.toml
@@ -282,6 +282,8 @@ typing-extensions-allowlist = [
   # Docs: https://typing-extensions.readthedocs.io/en/latest/
   "typing_extensions.Self", # Added in 4.0.0
 ]
+# Rules that are only enabled for code examples.
+example-rules = ["lazy-builtin-import", "log-model-artifact-path"]
 
 [tool.clint.forbidden-top-level-imports]
 "mlflow/gateway/providers/*" = ["fastapi", "starlette", "aiohttp"]
