Run `clint` on example code blocks (#15874)
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,11 +57,11 @@ repos:
         stages: [pre-commit]
         require_serial: true
 
-      - id: custom-python-lint
-        name: custom-python-lint
+      - id: clint
+        name: clint
         entry: clint
         language: system
-        files: '\.(py|ipynb)$'
+        files: '\.(py|ipynb|rst)$'
         stages: [pre-commit]
         require_serial: true
 
