--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,7 +61,7 @@ repos:
         name: clint
         entry: clint
         language: system
-        files: '\.(py|ipynb|rst)$'
+        files: '\.(py|ipynb|rst|mdx?)$'
         stages: [pre-commit]
         require_serial: true
 
