Add taplo and conftest in autoformat
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -92,6 +92,8 @@ jobs:
       # ************************************************************************
       - run: |
           dev/install-taplo.sh
+          dev/install-typos.sh
+          dev/install-conftest.sh
       - run: |
           pip install -r requirements/lint-requirements.txt
           pre-commit install
