--- a/.github/workflows/rerun.yml
+++ b/.github/workflows/rerun.yml
@@ -25,4 +25,6 @@ jobs:
           mkdir -p /tmp/pr
           echo $PR_NUMBER > /tmp/pr/pr_number
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: pr_number
           path: /tmp/pr/
