--- a/.github/workflows/cross-version-test-runner.yml
+++ b/.github/workflows/cross-version-test-runner.yml
@@ -17,10 +17,14 @@ jobs:
       actions: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: |
             .github
       - uses: ./.github/actions/validate-author
       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         id: get-ref
+        with:
+          result-encoding: string
           script: |
             const runner = require('./.github/workflows/cross-version-test-runner.js');
             await runner.main({ context, github });
