--- a/.github/workflows/labeling.yml
+++ b/.github/workflows/labeling.yml
@@ -24,7 +24,11 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: |
             .github
       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
             const script = require('./.github/workflows/labeling.js');
             await script({ github, context });
