--- a/.github/workflows/team-review.yml
+++ b/.github/workflows/team-review.yml
@@ -15,6 +15,8 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
             const { owner, repo } = context.repo;
             const pull_number = context.payload.pull_request.number;
             const members = [
