--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -370,6 +370,7 @@ jobs:
       - name: Run tests
         run: |
           pytest tests/optuna
+          pytest tests/pyspark/optuna
   pyfunc:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
