--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -369,8 +369,7 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          pytest tests/optuna
-          pytest tests/pyspark/optuna
+          pytest tests/optuna tests/pyspark/optuna
   pyfunc:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
