--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: ./.github/actions/validate-author
       - name: judge
         id: judge
-        uses: ./.github/actions/github-script
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             core.debug(JSON.stringify(context, null, 2));
@@ -231,7 +231,7 @@ jobs:
           sparse-checkout: |
             .github
       - name: Update status
-        uses: ./.github/actions/github-script
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const needs = ${{ toJson(needs) }};
