--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           sparse-checkout: |
             .github
-      - uses: ./.github/actions/github-script
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const script = require(
