--- a/.github/workflows/cherry-picks-warn.yml
+++ b/.github/workflows/cherry-picks-warn.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       pull-requests: write # to post a comment on the PR
     steps:
-      - uses: ./.github/actions/github-script
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             await github.rest.issues.createComment({
