--- a/.github/workflows/cross-version-test-runner.yml
+++ b/.github/workflows/cross-version-test-runner.yml
@@ -21,7 +21,7 @@ jobs:
           sparse-checkout: |
             .github
       - uses: ./.github/actions/validate-author
-      - uses: ./.github/actions/github-script
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         id: get-ref
         with:
           result-encoding: string
