--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -318,7 +318,7 @@ jobs:
         run: |
           source ./dev/install-common-deps.sh
           # GenAI evaluation tests require databricks-agents that only work with Python >= 3.10
-          pip install 'databricks-agents<0.22.0' openai
+          pip install 'databricks-agents<0.22.0' openai dspy
       - uses: ./.github/actions/show-versions
       - name: Run GenAI Tests
         run: |
