Who depends on flaml?
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/actions/pipdeptree/action.yml
+++ b/.github/actions/pipdeptree/action.yml
@@ -5,7 +5,13 @@ runs:
   steps:
     - shell: bash
       run: |
+        if [ -d ".venv" ]; then
+          source .venv/bin/activate
+        fi
         pip install pipdeptree
     - shell: bash
       run: |
+        if [ -d ".venv" ]; then
+          source .venv/bin/activate
+        fi
         pipdeptree --all
