--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -42,3 +42,6 @@ runs:
     - uses: astral-sh/setup-uv@f0ec1fc3b38f5e7cd731bb6ce540c5af426746bb # v6.1.0
       with:
         version: 0.7.8
+    - run: |
+        echo "UV_INDEX_STRATEGY=unsafe-first-match" >> $GITHUB_ENV
+      shell: bash
