fix spark-connect test issue
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -331,6 +331,15 @@ jobs:
           pip uninstall -y databricks-agents
           pytest tests/genai/test_genai_import_without_agent_sdk.py
 
+      - name: Run Tests with Local Spark Session
+        run: |
+          # databricks-agents installs databricks-connect that blocks us from running spark-related
+          # tests with local spark session. To work around this, we run tests after uninstalling
+          # databricks-connect.
+          pip uninstall -y databricks-connect pyspark -y
+          pip install pyspark
+          pytest tests/genai/evaluate/test_utils.py
+
   optuna:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
