--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -491,4 +491,4 @@ jobs:
           # Run Windows tests
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} \
             --ignore-flavors --ignore=tests/projects --ignore=tests/examples --ignore=tests/evaluate --ignore=tests/optuna \
-            --ignore=tests\pyspark\optuna --ignore=tests/genai tests
+            --ignore=tests/pyspark/optuna --ignore=tests/genai tests
