--- a/pyproject.toml
+++ b/pyproject.toml
@@ -335,3 +335,13 @@ extend-ignore-re = [
   # Azure Kubernetes Service
   "\\(AKS\\)",
 ]
+
+[tool.pytest.ini_options]
+addopts = "-p no:legacypath --strict-markers --color=yes --durations=10 --showlocals -v"
+filterwarnings = [
+  # Prevent deprecated numpy type aliases from being used
+  "error:^`np\\.[a-z]+` is a deprecated alias for.+:DeprecationWarning:mlflow",
+  "error:^`np\\.[a-z]+` is a deprecated alias for.+:DeprecationWarning:tests",
+  "error::pytest.PytestCollectionWarning",
+]
+timeout = 1200
