--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,11 @@ jobs:
             yarn install
             yarn build-all -- --no-r
             python changed_pages.py
+      - run:
+          name: Compare sitemaps
+          working_directory: docs
+          command: |
+            yarn sitemap https://mlflow.org/docs/latest/sitemap.xml ./build/sitemap.xml
       - store_artifacts:
           path: docs/build/
       - run:
