--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           name: Compare sitemaps
           working_directory: docs
           command: |
-            yarn sitemap https://mlflow.org/docs/latest/sitemap.xml ./build/sitemap.xml
+            yarn sitemap https://mlflow.org/docs/latest/sitemap.xml ./build/latest/sitemap.xml
       - store_artifacts:
           path: docs/build/
       - run:
